# SimpleAudioPlayer.Native

./: .gitignore  CMakeLists.txt  README-zh.md  README.md  SimpleAudioPlayer.Native.sln  android.toolchain.cmake  apple.toolchain.cmake  audio_player.c  audio_player.h  build-native-win64.ps1  cross_toolchain.cmake  ffmpeg.sh  windows.toolchain.cmake  windows_toolchain.cmake
.github/workflows/: CI.yml  android.yml
Native/: CMakeLists.txt  android.toolchain.cmake  apple.toolchain.cmake  linux.toolchain.cmake  windows.toolchain.cmake
Native/src/: audio_player.c  audio_player.h  audio_recorder.c  audio_recorder.h  miniaudio_ffmpeg.h
SimpleAudioPlayer.Native/: SimpleAudioPlayer.Native.csproj
src/: audio_player.c  audio_player.h  miniaudio_ffmpeg.h
